<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tentang"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeeee"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skripsi.ekoyulianto.biologipedia.TentangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_shadow2"
        android:orientation="vertical"
        android:padding="20dp">

        <com.skripsi.ekoyulianto.biologipedia.CustomFont.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/judul" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="162dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/uniku" />

        <com.skripsi.ekoyulianto.biologipedia.CustomFont.CustomTextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/biodata"
            android:textStyle="bold" />

        <com.skripsi.ekoyulianto.biologipedia.CustomFont.CustomTextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/biodata2"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
