<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bantuan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skripsi.ekoyulianto.biologipedia.BantuanActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.skripsi.ekoyulianto.biologipedia.CustomFont.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shadow2"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="Bantuan"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="60dp"
                android:background="@drawable/border_shadow2"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="1">

                <com.skripsi.ekoyulianto.biologipedia.CustomFont.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_1" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="167dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_weight="2.75"
                    android:src="@drawable/img1_1" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="167dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img1_2" />

                <com.skripsi.ekoyulianto.biologipedia.CustomFont.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_2" />

                <ImageView
                    android:layout_width="167dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img2_2" />

                <ImageView
                    android:layout_width="167dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img2_1" />

                <com.skripsi.ekoyulianto.biologipedia.CustomFont.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_3" />

                <ImageView
                    android:layout_width="167dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img3_1" />

                <ImageView
                    android:layout_width="167dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img3_2" />

                <com.skripsi.ekoyulianto.biologipedia.CustomFont.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_4" />

                <ImageView
                    android:layout_width="167dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img4_1" />

                <ImageView
                    android:layout_width="167dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img4_2" />

                <com.skripsi.ekoyulianto.biologipedia.CustomFont.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_5" />

                <ImageView
                    android:layout_width="167dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img5" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
